--- a/static/package.json
+++ b/static/package.json
@@ -5,7 +5,7 @@
     "build": "mkdir -p ./src/wasm ./src/js && cp -R ../js/src/ranks/*.json ./src/js && cp -R ../wasm/src/ranks/*.json ./src/wasm",
     "deploy": "wrangler pages publish ./src"
   },
-  "devDependencies": {
-    "wrangler": "^1.15.0"
+  "dependencies": {
+    "wrangler": "^3.65.1"
   }
 }
